--- a/views/index.templ
+++ b/views/index.templ
@@ -10,7 +10,7 @@ templ basePage() {
 			<script src="https://unpkg.com/htmx.org@2.0.2"></script>
 			<title>DnD</title>
 		</head>
-		<body class="bg-gray-200 flex flex-col justify-center items-center min-h-screen">
+		<body class="flex flex-col items-center justify-center min-h-screen bg-gray-200">
 			{ children... }
 		</body>
 	</html>
@@ -18,11 +18,11 @@ templ basePage() {
 
 templ IndexPage() {
 	@basePage() {
-		<h1 class="text-4xl font-bold m-2 mb-8 text-gray-800">Welcome to the Dungeon</h1>
+		<h1 class="m-2 mb-8 text-4xl font-bold text-gray-800">Welcome to the Dungeon</h1>
 		<br/>
 		<section class="flex flex-row">
-			<button hx-get="/login" hx-target="body" hx-push-url="true" class="bg-green-500 rounded-md m-2 p-2">Log in</button>
-			<button hx-get="/register" hx-target="body" hx-push-url="true" class="bg-green-500 rounded-md m-2 p-2">Register</button>
+			<button hx-get="/login" hx-target="body" hx-push-url="true" class="p-2 m-2 bg-green-500 rounded-md">Log in</button>
+			<button hx-get="/register" hx-target="body" hx-push-url="true" class="p-2 m-2 bg-green-500 rounded-md">Register</button>
 		</section>
 	}
 }
