--- a/views/register.templ
+++ b/views/register.templ
@@ -2,37 +2,38 @@ package views
 
 templ RegisterPage() {
 	@basePage() {
-		<form hx-post="/users">
-			<label>Email Address</label>
-			@UserInputField("email", "", "")
-			<label>Password</label>
-			@UserPasswordField("", "")
-			<button type="submit" class="p-2 m-2 bg-blue-500 rounded-md">
-				Register
-			</button>
-		</form>
-		<section>
-			<button hx-get="/" hx-target="body" hx-push-url="true" class="p-2 m-2 bg-green-500 rounded-md">
+		<div class="flex flex-col items-center justify-center p-8 border border-solid rounded-md border-slate-300 bg-slate-200">
+			<h1 class="m-2 mb-8 text-4xl font-bold text-center text-gray-800">Register</h1>
+			<form class="w-64" hx-post="/users">
+				<label>Email Address</label>
+				@UserInputField("email", "", "")
+				<label>Password</label>
+				@UserPasswordField("", "")
+				<button type="submit" class="w-full p-2 my-2 text-white bg-blue-500 rounded-md">
+					Register
+				</button>
+			</form>
+			<button hx-get="/" hx-target="body" hx-push-url="true" class="w-full p-2 my-2 text-white bg-green-600 rounded-md">
 				Return to main page
 			</button>
-		</section>
+		</div>
 	}
 }
 
 templ UserInputField(name, value, err string) {
 	<div hx-target="this" hx-swap="outerHTML">
-		<input type="text" name={ name } value={ value } required hx-post={ "/users/" + name }/>
+		<input type="text" name={ name } value={ value } required hx-post={ "/users/" + name } class="min-w-full p-1 my-2 rounded-md"/>
 		if err != "" {
-			<p class="text-red-500">{ err }</p>
+			<p class="text-red-500 text-wrap">{ err }</p>
 		}
 	</div>
 }
 
 templ UserPasswordField(value, err string) {
 	<div hx-target="this" hx-swap="outerHTML">
-		<input type="password" name="password" value={ value } required hx-post="/users/password"/>
+		<input type="password" name="password" value={ value } required hx-post="/users/password" class="min-w-full p-1 my-2 rounded-md"/>
 		if err != "" {
-			<p class="text-red-500">{ err }</p>
+			<p class="text-red-500 text-wrap">{ err }</p>
 		}
 	</div>
 }
