--- a/views/register.templ
+++ b/views/register.templ
@@ -21,7 +21,7 @@ templ RegisterPage() {
 				</button>
 			</form>
 			<!-- Return Button -->
-			<button hx-get="/" hx-target="#content" class="w-full mt-4 py-2 px-4 bg-gray-500 text-white rounded-md shadow hover:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-gray-400 transition duration-300">
+			<button hx-get="/index" hx-target="#content" class="w-full mt-4 py-2 px-4 bg-gray-500 text-white rounded-md shadow hover:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-gray-400 transition duration-300">
 				Return to Main Page
 			</button>
 		</div>
