--- a/views/index.templ
+++ b/views/index.templ
@@ -30,7 +30,7 @@ templ BasePage() {
 			<!-- Header Section -->
 			<header class="w-full py-6 bg-transparent">
 				<div class="container mx-auto flex justify-between items-center px-4">
-					<button hx-get="/" hx-target="body" hx-swap="outerHTML" class="text-2xl font-extrabold tracking-wide">DnD Dungeon</button>
+					<button hx-get="/" hx-target="body" hx-swap="outerHTML" class="text-2xl font-extrabold tracking-wide">DnD Simulator</button>
 				</div>
 			</header>
 			<!-- Main Content -->
@@ -40,7 +40,7 @@ templ BasePage() {
 			<!-- Footer Section -->
 			<footer class="w-full py-4 bg-transparent">
 				<div class="container mx-auto text-center text-sm">
-					&copy; 2024 DnD Dungeon. All rights reserved.
+					This is just an educational project. I absolutely do not own the copyright.
 				</div>
 			</footer>
 		</body>
@@ -51,11 +51,10 @@ templ IndexPage() {
 	<div class="text-center">
 		<h1 class="text-5xl font-extrabold mb-6 animate-fadeIn">Welcome to the Dungeon</h1>
 		<p class="text-lg mb-12 animate-fadeIn">Embark on your epic journey. Log in or register to begin your adventure.</p>
-		<div class="flex justify-center space-x-6">
+		<div id="button-set" class="flex justify-center space-x-6 animate-fadeIn">
 			<button
 				hx-get="/login"
-				hx-target="main"
-				hx-push-url="true"
+				hx-target="#button-set"
 				class="px-6 py-3 bg-green-500 text-white rounded-md shadow-lg hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-green-400 transition duration-300 transform hover:-translate-y-1 hover:scale-105"
 			>
 				Log In
