--- a/views/register.templ
+++ b/views/register.templ
@@ -1,31 +1,33 @@
 package views
 
 templ RegisterPage() {
-	<div class="flex items-center justify-center px-4 bg-transparent">
-		<div class="w-full max-w-md p-8 bg-white dark:bg-gray-800 rounded-lg shadow-lg transition-shadow duration-300 animate-fadeIn">
-			<h1 class="text-3xl font-bold mb-6 text-center text-gray-800 dark:text-gray-100">Register</h1>
-			<form class="space-y-4" hx-post="/users" hx-swap="outerHTML">
-				<!-- Email Field -->
-				<div>
-					<label for="email" class="block text-sm font-medium text-gray-700 dark:text-gray-300">Email Address</label>
-					@UserInputField("email", "", "")
-				</div>
-				<!-- Password Field -->
-				<div>
-					<label for="password" class="block text-sm font-medium text-gray-700 dark:text-gray-300">Password</label>
-					@UserPasswordField("", "")
-				</div>
-				<!-- Register Button -->
-				<button type="submit" class="w-full py-2 px-4 bg-blue-500 text-white rounded-md shadow hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400 transition duration-300">
-					Register
+	@BasePage(true) {
+		<div class="flex items-center justify-center px-4 bg-transparent">
+			<div class="w-full max-w-md p-8 bg-white dark:bg-gray-800 rounded-lg shadow-lg transition-shadow duration-300 animate-fadeIn">
+				<h1 class="text-3xl font-bold mb-6 text-center text-gray-800 dark:text-gray-100">Register</h1>
+				<form class="space-y-4" hx-post="/users" hx-swap="outerHTML">
+					<!-- Email Field -->
+					<div>
+						<label for="email" class="block text-sm font-medium text-gray-700 dark:text-gray-300">Email Address</label>
+						@UserInputField("email", "", "")
+					</div>
+					<!-- Password Field -->
+					<div>
+						<label for="password" class="block text-sm font-medium text-gray-700 dark:text-gray-300">Password</label>
+						@UserPasswordField("", "")
+					</div>
+					<!-- Register Button -->
+					<button type="submit" class="w-full py-2 px-4 bg-blue-500 text-white rounded-md shadow hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400 transition duration-300">
+						Register
+					</button>
+				</form>
+				<!-- Return Button -->
+				<button hx-get="/index" hx-target="#content" class="w-full mt-4 py-2 px-4 bg-gray-500 text-white rounded-md shadow hover:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-gray-400 transition duration-300">
+					Return to Main Page
 				</button>
-			</form>
-			<!-- Return Button -->
-			<button hx-get="/index" hx-target="#content" class="w-full mt-4 py-2 px-4 bg-gray-500 text-white rounded-md shadow hover:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-gray-400 transition duration-300">
-				Return to Main Page
-			</button>
+			</div>
 		</div>
-	</div>
+	}
 }
 
 templ UserInputField(name, value, err string) {
