--- a/views/index.templ
+++ b/views/index.templ
@@ -7,8 +7,7 @@ templ BasePage(enableDecorations bool) {
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
-			<!-- Tailwind CSS CDN -->
-			<script src="https://cdn.tailwindcss.com"></script>
+			<link rel="stylesheet" href="../static/css/dist.css"/>
 			<!-- HTMX CDN -->
 			<script src="https://unpkg.com/htmx.org@2.0.4"></script>
 			<script>
@@ -36,7 +35,7 @@ templ BasePage(enableDecorations bool) {
     			}
             </style>
 		</head>
-		<body class="bg-gradient-to-r from-gray-500 via-gray-400 to-gray-300 dark:bg-gradient-to-r dark:from-gray-800 dark:via-gray-900 dark:to-black text-gray-800 dark:text-gray-100 min-h-screen flex flex-col transition-colors duration-500">
+		<body class="bg-gradient-to-r from-gray-800 via-gray-900 to-black text-gray-100 min-h-screen flex flex-col transition-colors duration-500">
 			<!-- Header Section -->
 			if enableDecorations {
 				<header class="w-full py-4 bg-transparent">
