--- a/views/login.templ
+++ b/views/login.templ
@@ -1,24 +1,14 @@
 package views
 
-templ LoginForm() {
+import "DnDSim/views/common"
+
+templ LoginPage() {
 	@BasePage(true) {
 		<div class="flex items-center justify-center px-4 bg-transparent">
-			<form class="space-y-4" hx-post="/sessions" hx-swap="outerHTML" hx-target="#content">
-				<!-- Email Field -->
-				<div>
-					<label for="email" class="block text-sm font-medium text-gray-700 dark:text-gray-300">Email Address</label>
-					@UserInputField("email", "", "")
-				</div>
-				<!-- Password Field -->
-				<div>
-					<label for="password" class="block text-sm font-medium text-gray-700 dark:text-gray-300">Password</label>
-					@UserPasswordField("", "")
-				</div>
-				<!-- Register Button -->
-				<button type="submit" class="w-full py-2 px-4 bg-blue-500 text-white rounded-md shadow hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400 transition duration-300">
-					Login
-				</button>
-			</form>
+			@common.Form("/sessions", "Login") {
+				@common.UserInputField("Email Address", "email", "", "")
+				@common.UserPasswordField("Password", "password", "")
+			}
 		</div>
 	}
 }
