--- a/views/register.templ
+++ b/views/register.templ
@@ -7,6 +7,9 @@ templ RegisterPage() {
 		<div class="flex items-center justify-center w-2/6 px-4 bg-transparent">
 			<div class="w-full p-8 transition-shadow duration-300 bg-gray-800 rounded-lg shadow-lg animate-fadeIn">
 				<h1 class="mb-6 text-3xl font-bold text-center text-gray-100">Register</h1>
+				@common.EmailFormField("register-form", "/users/email")
+				<br>
+				@common.PasswordFormField("register-form", "/users/password")
 				@RegisterForm()
 				<!-- Return Button -->
 				<button hx-get="/" hx-target="body" hx-push-url="true" class="w-full px-4 py-2 mt-4 text-white transition duration-300 bg-gray-500 rounded-md shadow hover:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-gray-400">
@@ -18,9 +21,10 @@ templ RegisterPage() {
 }
 
 templ RegisterForm() {
-	@common.Form("/users", "Register") {
-		@common.UserInputField("Username", "username", "", "")
-		@common.UserInputField("Email", "email", "", "")
-		@common.UserPasswordField("Password", "", "")
-	}
+	<form id="register-form" hx-post="/users" hx-swap="outerHTML" class="space-y-4">
+		<br>
+		<button type="submit" class="w-full px-4 py-2 text-white transition duration-300 bg-blue-500 rounded-md shadow hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400">
+			Register
+		</button>
+	</form>
 }
