--- a/views/index.templ
+++ b/views/index.templ
@@ -8,8 +8,7 @@ templ BasePage(enableDecorations bool) {
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
 			<link rel="stylesheet" href="../static/css/dist.css"/>
-			<!-- HTMX CDN -->
-			<script src="https://unpkg.com/htmx.org@2.0.4"></script>
+			<script src="../static/htmx.min.js"></script>
 			<script>
 				htmx.on("htmx:beforeSwap", (e) => {
 					// Allow 422 responses to swap
@@ -35,11 +34,11 @@ templ BasePage(enableDecorations bool) {
     			}
             </style>
 		</head>
-		<body class="bg-gradient-to-r from-gray-800 via-gray-900 to-black text-gray-100 min-h-screen flex flex-col transition-colors duration-500">
+		<body class="flex flex-col min-h-screen text-gray-100 transition-colors duration-500 bg-gradient-to-r from-gray-800 via-gray-900 to-black">
 			<!-- Header Section -->
 			if enableDecorations {
 				<header class="w-full py-4 bg-transparent">
-					<div class="container mx-auto flex justify-between items-center px-4">
+					<div class="container flex items-center justify-between px-4 mx-auto">
 						<a href="/" class="text-3xl font-extrabold tracking-wide">
 							DnD Simulator
 						</a>
@@ -48,13 +47,13 @@ templ BasePage(enableDecorations bool) {
 				</header>
 			}
 			<!-- Main Content -->
-			<main id="content" class="flex-grow container mx-auto px-4 py-8 flex items-center justify-center">
+			<main id="content" class="container flex items-center justify-center flex-grow px-4 py-8 mx-auto">
 				{ children... }
 			</main>
 			<!-- Footer Section -->
 			if enableDecorations {
 				<footer class="w-full py-4 bg-transparent">
-					<div class="container mx-auto text-center text-sm">
+					<div class="container mx-auto text-sm text-center">
 						This is just an educational project. I absolutely do not own the copyright.
 					</div>
 				</footer>
@@ -67,13 +66,13 @@ templ AuthButtons() {
 	<div class="flex space-x-6">
 		<a
 			href="/login"
-			class="px-4 py-2 bg-green-500 text-white rounded-md shadow hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-green-400 transition duration-300 transform hover:-translate-y-1 hover:scale-105"
+			class="px-4 py-2 text-white transition duration-300 transform bg-green-500 rounded-md shadow hover:bg-green-600 focus:outline-none focus:ring-2 focus:ring-green-400 hover:-translate-y-1 hover:scale-105"
 		>
 			Log In
 		</a>
 		<a
 			href="/register"
-			class="px-4 py-2 bg-blue-500 text-white rounded-md shadow hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400 transition duration-300 transform hover:-translate-y-1 hover:scale-105"
+			class="px-4 py-2 text-white transition duration-300 transform bg-blue-500 rounded-md shadow hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400 hover:-translate-y-1 hover:scale-105"
 		>
 			Register
 		</a>
@@ -83,11 +82,11 @@ templ AuthButtons() {
 templ IndexPage() {
 	@BasePage(true) {
 		<div class="text-center">
-			<h1 class="text-5xl font-extrabold mb-6 animate-fadeIn">Welcome to the Dungeon</h1>
-			<p class="text-lg mb-12 animate-fadeIn">Embark on your epic journey. Hit the button below to begin.</p>
+			<h1 class="mb-6 text-5xl font-extrabold animate-fadeIn">Welcome to the Dungeon</h1>
+			<p class="mb-12 text-lg animate-fadeIn">Embark on your epic journey. Hit the button below to begin.</p>
 			<a
 				href="/start"
-				class="px-10 py-5 bg-red-500 text-white rounded-full shadow-lg text-2xl font-bold hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-red-400 transition duration-300 transform hover:-translate-y-1 hover:scale-105 animate-fadeIn"
+				class="px-10 py-5 text-2xl font-bold text-white transition duration-300 transform bg-red-500 rounded-full shadow-lg hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-red-400 hover:-translate-y-1 hover:scale-105 animate-fadeIn"
 			>
 				Start Game
 			</a>
