--- a/views/register.templ
+++ b/views/register.templ
@@ -7,6 +7,8 @@ templ RegisterPage() {
 		<div class="flex items-center justify-center w-2/6 px-4 bg-transparent">
 			<div class="w-full p-8 transition-shadow duration-300 bg-gray-800 rounded-lg shadow-lg animate-fadeIn">
 				<h1 class="mb-6 text-3xl font-bold text-center text-gray-100">Register</h1>
+				@common.UsernameFormField("register-form", "/users/username")
+				<br>
 				@common.EmailFormField("register-form", "/users/email")
 				<br>
 				@common.PasswordFormField("register-form", "/users/password")
