refactor: Update registration form handling and validation logic

--- a/views/common/forms.templ
+++ b/views/common/forms.templ
@@ -1,7 +1,7 @@
 package common
 
-templ Form(target, submitName string) {
-	<form class="space-y-4" hx-post={ target } hx-swap="outerHTML">
+templ Form(formID, target, submitName string) {
+	<form id={ formID } class="space-y-4" hx-post={ target } hx-swap="outerHTML">
 		{ children... }
 		<br/>
 		<button type="submit" class="w-full px-4 py-2 text-white transition duration-300 bg-blue-500 rounded-md shadow hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400">
