--- a/views/register.templ
+++ b/views/register.templ
@@ -12,7 +12,8 @@ templ RegisterPage() {
 				@common.EmailFormField("register-form", "/users/email")
 				<br>
 				@common.PasswordFormField("register-form", "/users/password")
-				@RegisterForm()
+				<br>
+				@common.Form("register-form", "/users", "Register")
 				<!-- Return Button -->
 				<button hx-get="/" hx-target="body" hx-push-url="true" class="w-full px-4 py-2 mt-4 text-white transition duration-300 bg-gray-500 rounded-md shadow hover:bg-gray-600 focus:outline-none focus:ring-2 focus:ring-gray-400">
 					Return to Main Page
@@ -20,13 +21,4 @@ templ RegisterPage() {
 			</div>
 		</div>
 	}
-}
-
-templ RegisterForm() {
-	<form id="register-form" hx-post="/users" hx-swap="outerHTML" class="space-y-4">
-		<br>
-		<button type="submit" class="w-full px-4 py-2 text-white transition duration-300 bg-blue-500 rounded-md shadow hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400">
-			Register
-		</button>
-	</form>
 }
