--- a/views/login.templ
+++ b/views/login.templ
@@ -3,11 +3,17 @@ package views
 import "DnDSim/views/common"
 
 templ LoginPage() {
-	@BasePage(true) {
-		<div class="flex items-center justify-center px-4 bg-transparent">
-			@common.Form("/sessions", "Login") {
-				@common.UserInputField("Email Address", "email", "", "")
-			}
+	@BasePage("Login", true) {
+		<div class="flex items-center justify-center w-2/6 px-4 bg-transparent">
+			<div class="w-full p-8 transition-shadow duration-300 bg-gray-800 rounded-lg shadow-lg animate-fadeIn">
+				<h1 class="mb-6 text-3xl font-bold text-center text-gray-100">Login</h1>
+				@common.UsernameFormField("login-form", "")
+				<br/>
+				@common.PasswordFormField("login-form", "/sessions/check")
+				<br/>
+				@common.Form("login-form", "/sessions", "Login")
+				<a href="/register" class="block w-full mt-4 text-center text-blue-500 hover:underline">Don't have an account? Register</a>
+			</div>
 		</div>
 	}
 }
