--- a/views/register.templ
+++ b/views/register.templ
@@ -3,7 +3,7 @@ package views
 import "DnDSim/views/common"
 
 templ RegisterPage() {
-	@BasePage(true) {
+	@BasePage("Register", true) {
 		<div class="flex items-center justify-center w-2/6 px-4 bg-transparent">
 			<div class="w-full p-8 transition-shadow duration-300 bg-gray-800 rounded-lg shadow-lg animate-fadeIn">
 				<h1 class="mb-6 text-3xl font-bold text-center text-gray-100">Register</h1>
