--- a/views/login.templ
+++ b/views/login.templ
@@ -9,8 +9,9 @@ templ LoginPage() {
 				<h1 class="mb-6 text-3xl font-bold text-center text-gray-100">Login</h1>
 				@common.UsernameFormField("login-form", "")
 				<br/>
-				@common.PasswordFormField("login-form", "/sessions/check")
+				@common.PasswordFormField("login-form", "")
 				<br/>
+				// TODO add error message
 				@common.Form("login-form", "/sessions", "Login")
 				<a href="/register" class="block w-full mt-4 text-center text-blue-500 hover:underline">Don't have an account? Register</a>
 			</div>
